Author is now taken into account when you view and add announcements

--- a/Stable Frontend/Pages/AnnouncementPost.razor
+++ b/Stable Frontend/Pages/AnnouncementPost.razor
@@ -1,6 +1,7 @@
 ﻿@page "/post/{Id}"
 @using Google.Type
 @using Stable_Lib.Handlers
+@using Stable_Lib.Models
 @inject FirestoreHandler Handler
 
 <!-- This page will be an individual page for announcements-->
@@ -14,7 +15,7 @@
     <div style="margin:3%" id="Post Contents">
         <div >
             <h2>@Announcement.Title</h2>                 <!-- This portion is for the announcement title-->
-            <p style="margin:0px;padding:0px; font-size:9pt">Edited by @Announcement.Author | @Announcement.LastModified.ToLocalTime()</p>
+            <p style="margin:0px;padding:0px; font-size:9pt">Edited by @AuthorName| @Announcement.LastModified.ToLocalTime()</p>
             <hr style="margin:0px 0px 5px 0px ">
 
             <span class="text-nowrap" style="border:10px 0 0 0">
