--- a/Stable Frontend/Shared/NavMenu.razor
+++ b/Stable Frontend/Shared/NavMenu.razor
@@ -1,12 +1,15 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="announcement">UAH Stable</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+﻿@using Stable_Lib.Handlers
+@inject FirestoreHandler Handler
+
+<div class="top-row pl-4 navbar navbar-dark">
+    <a class="navbar-brand" href="Index">UAH Stable</a>
+    @* <button class="navbar-toggler" @onclick="ToggleNavMenu"> *@
+    @*     <span class="navbar-toggler-icon"></span> *@
+    @* </button> *@
 </div>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
+<div hidden="@Handler.LoggedIn.Equals(false)" >
+    <ul class="nav flex-column" >
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="announcement" Match="NavLinkMatch.All">
@@ -33,12 +36,12 @@
 </div>
 
 @code {
-    private bool collapseNavMenu = true;
-
-    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
+    // private bool collapseNavMenu = true;
+    //
+    // private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    //
+    // private void ToggleNavMenu()
+    // {
+    //     collapseNavMenu = !collapseNavMenu;
+    // }
 }
