Made sure the button on the left points to the homepage

--- a/Stable Frontend/Shared/NavMenu.razor
+++ b/Stable Frontend/Shared/NavMenu.razor
@@ -2,7 +2,7 @@
 @inject FirestoreHandler Handler
 
 <div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="Index">UAH Stable</a>
+    <a class="navbar-brand" href="/">UAH Stable</a>
     @* <button class="navbar-toggler" @onclick="ToggleNavMenu"> *@
     @*     <span class="navbar-toggler-icon"></span> *@
     @* </button> *@
