Added petition page loading

--- a/Stable Frontend/Pages/PetitionPost.razor
+++ b/Stable Frontend/Pages/PetitionPost.razor
@@ -1,4 +1,4 @@
-﻿@page "/petition post"
+﻿@page "/petitionpost/{Id}"
 <!-- This page will be an individual page for announcements-->
 
 <div class="navbar navbar-lgiht bg-light">
