--- a/Stable Frontend/Pages/Petition.razor
+++ b/Stable Frontend/Pages/Petition.razor
@@ -1,10 +1,10 @@
 ﻿@page "/petition"
 
-@using Stable_Frontend.Data
-@*@inject FirestoreHandler Handler*@
+
+@using Stable_Lib.Handlers
+@inject FirestoreHandler Handler
 @inject NavigationManager NavManager
 
-@inject WeatherForecastService ForecastService
 
 <div class="navbar navbar-lgiht bg-light">
     <div class="navbar-brand mb-0">
@@ -19,18 +19,18 @@
                     <tr>
                         <th style="width:10%">Category</th>
                         <th style="width:65%">Title</th>
-                        <th style="width:10%">Edited</th>
+                        <th style="width:10%">Created</th>
                         <th style="width:15%">Votes</th>
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var forecast in forecasts)
+                    @foreach (var resultsKey in Results.Keys)
                     {
                         <tr>
-                            <td>@forecast.Category</td>
-                            <td>@forecast.Title</td>
-                            <td><p style="margin:0px; padding:0px">@forecast.Name</p><p style="margin:0px; padding:0px">@Date.ToShortDateString()</p></td>
-                            <td><span class="oi oi-thumb-up">@forecast.Upvote</span>  <span class="oi oi-thumb-down">@forecast.Downvote</span> </td>
+                            <td>@Results[resultsKey].Category</td>
+                            <td>@Results[resultsKey].Title</td>
+                            <td><p style="margin:0px; padding:0px">@Results[resultsKey].Created.ToLocalTime().ToString("f")</p></td>
+                            <td><span class="oi oi-thumb-up">@Results[resultsKey].Votes</span></td>
                         </tr>
                     }
                 </tbody>
@@ -41,21 +41,3 @@
         </div>
     </div>
 </div>
-
-
-@code
-{
-    private WeatherForecast[] forecasts;
-
-    protected override async Task OnInitializedAsync()
-    {
-        forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
-    }
-
-    DateTime Date = DateTime.Now;
-
-    private void AddPetition()
-    {
-        NavManager.NavigateTo("petitioneditor");
-    }
-}
