Can now submit petitions

--- a/Stable Frontend/Pages/PetitionEditor.razor
+++ b/Stable Frontend/Pages/PetitionEditor.razor
@@ -22,6 +22,8 @@
         <div class="form-group">
             <label for="titleInput">Title</label>
             <input @bind="Title" type="text" class="form-control" id="titleInput" placeholder="Enter title">
+            <label for="categoryInput">Category</label>
+            <input @bind="Category" type="text" class="form-control" id="categoryInput" placeholder="A descriptive category for the petition like 'Student Life'">
         </div>
         <div class="form-group">
             <div id="toolbar">
