--- a/Stable Frontend/Pages/Announcement.razor
+++ b/Stable Frontend/Pages/Announcement.razor
@@ -17,6 +17,14 @@
             <h6 class="font-weight-bold" style="margin:10px 0">Categories</h6>
             <table>
                 <tr>
+                    <th><input type="checkbox" id="general" value="arts_val" /></th>
+                    <th>General</th>
+                </tr>
+                <tr>
+                    <th></th>
+                    <th style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">Colleges</th>
+                </tr>
+                <tr>
                     <th><input type="checkbox" id="arts" value="arts_val" bind="@Checked[0]" /></th>
                     <th>College of Arts Humanities Social Sciences</th>
                 </tr>
@@ -43,6 +51,10 @@
                 <tr>
                     <th><input type="checkbox" id="honors" value="honors_val" bind="@Checked[6]" /></th>
                     <th>Honors College</th>
+                </tr>
+                <tr>
+                    <th></th>
+                    <th>Communities</th>
                 </tr>
             </table>
             <br/>
