Register page fix for if there is an error

--- a/Stable Frontend/Pages/RegisterPage.razor
+++ b/Stable Frontend/Pages/RegisterPage.razor
@@ -27,6 +27,7 @@
                     <div class="form-group">
                         <label for="password" class="text-info">Password:</label><br>
                         <input @bind="Password" type="password" name="password" id="password" class="input form-control" placeholder="Must be at least 8 characters and contain a number!" required>
+                        <div >@error</div>
                     </div>
                     <div class="form-group">
                         
