Fixed announcement page bug

--- a/Stable Frontend/Pages/Announcement.razor
+++ b/Stable Frontend/Pages/Announcement.razor
@@ -94,8 +94,9 @@
                         @foreach (var resultsKey in Results.Keys)
                         {
                             <tr>
-                                @* <td><b hidden="@Results[resultsKey].College[0]== ">A</b><b>B</b><b>Ed</b><b>En</b><b>N</b><b>S</b><b>H</b></td> *@
-                                <td>@foreach(var c in Results[resultsKey].College){@(c.Substring(0, 2) + ' ')}</td>
+                                <td>@foreach (var c in Results[resultsKey].College) {
+                                        @(c.Substring(0, 2) + ' ')
+                                    }</td>
                                 <a href="/post/@resultsKey"><td>@Results[resultsKey].Title</td></a>
                                 <td>@Results[resultsKey].LastModified.ToLocalTime().ToString("f")</td>
                             </tr>
