--- a/Stable Frontend/Pages/Project.razor
+++ b/Stable Frontend/Pages/Project.razor
@@ -1,10 +1,14 @@
 ﻿@page "/project"
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<div class="navbar navbar-light bg-light">
+    <div class="navbar-brand mb-0">
+        <h2>Projects</h2>
+    </div>
+</div>
+<div>
+    <p>This is a place where students can pitch their interesting and creative ideas to gain support and advice from other students.</p>
+</div>
 
 @code {
 
